auth (new hide password method), docs, and some tests added
